fix: fixed overlapping of elements in workout page

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -572,10 +572,6 @@ video {
   position: relative;
 }
 
-.-bottom-8 {
-  bottom: -2rem;
-}
-
 .bottom-0 {
   bottom: 0px;
 }
@@ -654,6 +650,10 @@ video {
   margin-bottom: 1.5rem;
 }
 
+.-mb-8 {
+  margin-bottom: -2rem;
+}
+
 .-mt-1 {
   margin-top: -0.25rem;
 }
@@ -688,22 +688,6 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.mt-7 {
-  margin-top: 1.75rem;
-}
-
-.mt-10 {
-  margin-top: 2.5rem;
-}
-
-.mt-80 {
-  margin-top: 20rem;
 }
 
 .flex {
@@ -918,6 +902,10 @@ video {
 
 .items-start {
   align-items: flex-start;
+}
+
+.items-end {
+  align-items: flex-end;
 }
 
 .items-center {
@@ -1221,8 +1209,8 @@ video {
   line-height: 1;
 }
 
-.text-9xl {
-  font-size: 8rem;
+.text-8xl {
+  font-size: 6rem;
   line-height: 1;
 }
 
@@ -1239,16 +1227,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-8xl {
-  font-size: 6rem;
-  line-height: 1;
-}
-
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
 }
 
 .font-bold {
@@ -1416,14 +1394,4 @@ video {
 .active\:text-yellow-600:active {
   --tw-text-opacity: 1;
   color: rgb(202 138 4 / var(--tw-text-opacity));
-}
-
-.active\:text-yellow-400:active {
-  --tw-text-opacity: 1;
-  color: rgb(250 204 21 / var(--tw-text-opacity));
-}
-
-.active\:text-yellow-800:active {
-  --tw-text-opacity: 1;
-  color: rgb(133 77 14 / var(--tw-text-opacity));
 }
